2009-10-24  Janus Weil  <janus@gcc.gnu.org> 	    Paul Thomas  <pault@gcc.gnu.org>

PR fortran/41784
	* module.c (load_derived_extensions): Skip symbols which are not being
	loaded.


2009-10-24  Janus Weil  <janus@gcc.gnu.org>

	PR fortran/41784
	* gfortran.dg/extends_8.f03: New test.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@153534 138bc75d-0d04-0410-961f-82ee72b054a4